apps/dashboard/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: dashboard
    labels:
        run: dashboard
spec:
    ports:
        - port: 80
          targetPort: 80
    selector:
        run: dashboard
