apps/dashboard/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dashboard-ingress
    namespace: dashboard
    annotations:
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        kubernetes.io/ingress.class: "nginx"
spec:
    tls:
        - hosts:
              - app.adomate.ai
          secretName: dashboard-tls
    rules:
        - host: app.adomate.ai
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: dashboard
                            port:
                                number: 80
